# bazel-remote-apis-rs

./: .gitignore  Cargo.toml  build.rs
proto/kv_storage/: kv_storage.proto
src/: lib.rs
