[package]
name = "bazel-remote-apis-rs"
version = "0.1.0"
edition = "2018"
description = "Language binding for Bazel remote APIs for Rust"
authors = ["Cheng Pan <pancheng1987@gmail.com>"]
license = "MIT"
homepage = "https://github.com/leakingtapan/bazel-remote-apis-rs"
repository = "https://github.com/leakingtapan/bazel-remote-apis-rs.git"
keywords = ["Bazel"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.40", default-features = false }
prost = { version = "0.11.6", features = ["prost-derive"], default-features = false }
prost-types = { version = "0.11.6", features = ["std"], default-features = false }
tonic = { version = "0.8.3", features = ["codegen", "prost-derive", "prost"], default-features = false }


[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost-build", "prost"], default-features = false }
